objects/ssot__ActivityPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityChgRvwThresholdPct__c</fullName>
        <label>Activity Change Review Threshold Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssigneeDueDate__c</fullName>
        <label>Assignee Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AssigneePlanAdjEndDate__c</fullName>
        <label>Assignee Plan Adjustment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AssigneePlanAdjStartDate__c</fullName>
        <label>Assignee Plan Adjustment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Activity Plan Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsCalculationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerDueDate__c</fullName>
        <label>Reviewer Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerPlanAdjEndDate__c</fullName>
        <label>Reviewer Plan Adjustment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewerPlanAdjStartDate__c</fullName>
        <label>Reviewer Plan Adjustment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimePeriodId__c</fullName>
        <label>TimePeriod</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAcctAdjThresholdPct__c</fullName>
        <label>Total Account Adjustment Threshold Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAcctChgThresholdPct__c</fullName>
        <label>Total Account Chg Review Threshold Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalActvtyChgThresholdPct__c</fullName>
        <label>Total Activity Chg Review Threshold Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAllowAdjRequestCount__c</fullName>
        <label>Total Allowed Adjustment Request Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkingDayCount__c</fullName>
        <label>Working Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800701940_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityPlan_ParentRecordId_map_Acti_rel</label>
        <referenceTo>ssot__ActivityPlan__dlm</referenceTo>
        <relationshipLabel>ActivityPlan_ParentRecordId_map_Acti_rel</relationshipLabel>
        <relationshipName>rel_1752800701940_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800704809_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityPlan_TimePeriodId_map_TimePe_rel</label>
        <referenceTo>ssot__TimePeriod__dlm</referenceTo>
        <relationshipLabel>ActivityPlan_TimePeriodId_map_TimePe_rel</relationshipLabel>
        <relationshipName>rel_1752800704809_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>